--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,7 @@ allprojects {
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
+
+tasks.wrapper {
+  distributionType = Wrapper.DistributionType.ALL
+}
