--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="nyc.c4q.vice.mobile">
+    package="org.pursuit.demo.mobile">
 
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
       android:allowBackup="false"
-      android:name=".ViceApp"
+      android:name=".PursuitDemoApp"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
