--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.4.2'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41'
+    classpath 'com.squareup.sqldelight:gradle-plugin:1.1.4'
   }
 }
 
