--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
   implementation 'com.squareup.sqldelight:rxjava2-extensions:1.1.4'
 
   testImplementation 'junit:junit:4.12'
+  testImplementation 'com.google.truth:truth:1.0'
+  testImplementation 'com.squareup.sqldelight:sqlite-driver:1.1.4'
 }
